# tubes

./: README.md  stack.yaml  tubes.cabal
app/: Main.hs
client/: Main.hs
server/: Main.hs
server/Tubes/: Server.hs
src/: Tubes.hs
src/Tubes/: Bot.hs  Config.hs  Control.hs  Model.hs  Render.hs
src/Tubes/Model/: Action.hs  Tube.hs  Universe.hs
tubes/: default.nix  tubes.cabal  tubes.nix
tubes-client/: tubes-client.cabal
tubes-local/: tubes-local.cabal
tubes-server/: tubes-server.cabal
tubes-server/app/Tubes/: Server.hs
tubes/src/: Tubes.hs
tubes/src/Tubes/: Config.hs  Model.hs  Render.hs
tubes/src/Tubes/Model/: Action.hs  Tube.hs  Universe.hs
