name:                tubes
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/tubes#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Tubes
    Tubes.Bot
    Tubes.Config
    Tubes.Control
    Tubes.Model
    Tubes.Model.Action
    Tubes.Model.Tube
    Tubes.Model.Universe
    Tubes.Render
  build-depends:       base >= 4.7 && < 5
                     , binary
                     , containers
                     , gloss
                     , MonadRandom
                     , random
                     , stm
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-type-defaults

executable tubes-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , tubes
  default-language:    Haskell2010

executable tubes-client
  hs-source-dirs:      client
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , binary
                     , gloss
                     , stm
                     , tubes
                     , websockets
  default-language:    Haskell2010

executable tubes-server
  hs-source-dirs:      server
  main-is:             Main.hs
  other-modules:
    Tubes.Server
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , binary
                     , containers
                     , http-types
                     , MonadRandom
                     , servant
                     , servant-server
                     , stm
                     , tagged
                     , tubes
                     , wai
                     , wai-websockets
                     , warp
                     , websockets
  default-language:    Haskell2010

test-suite tubes-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , tubes
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/tubes
