name:                tubes-local
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/tubes#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable tubes-local
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , tubes
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/tubes
