name:                tubes-server
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/tubes#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable tubes-server
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:
    Tubes.Server
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , binary
                     , containers
                     , http-types
                     , MonadRandom
                     , servant
                     , servant-server
                     , stm
                     , tagged
                     , tubes
                     , wai
                     , wai-websockets
                     , warp
                     , websockets
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/tubes
