name:                tubes
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/tubes#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Tubes
    Tubes.Bot
    Tubes.Config
    Tubes.Control
    Tubes.Model
    Tubes.Model.Action
    Tubes.Model.Tube
    Tubes.Model.Universe
    Tubes.Render
  build-depends:       base >= 4.7 && < 5
                     , binary
                     , containers
                     , gloss
                     , MonadRandom
                     , random
                     , stm
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-type-defaults

test-suite tubes-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , tubes
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/tubes
